// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Well checkGrammar 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkGrammar 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkGrammar 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkGrammar 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkHighlight 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkHighlight 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkHighlight 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkHighlight 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkSpaces 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkSpaces 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkSpaces 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkSpaces 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well className 1`] = `
<div
  className="uu5-bricks-well my-classname uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 1`] = `
<div
  className="color-schema-default uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 2`] = `
<div
  className="color-schema-red uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 3`] = `
<div
  className="color-schema-red uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 4`] = `
<div
  className="color-schema-red-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 5`] = `
<div
  className="color-schema-red-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 6`] = `
<div
  className="color-schema-green uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 7`] = `
<div
  className="color-schema-green uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 8`] = `
<div
  className="color-schema-green-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 9`] = `
<div
  className="color-schema-green-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 10`] = `
<div
  className="color-schema-yellow uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 11`] = `
<div
  className="color-schema-yellow uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 12`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 13`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 14`] = `
<div
  className="color-schema-purple uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 15`] = `
<div
  className="color-schema-purple uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 16`] = `
<div
  className="color-schema-purple-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 17`] = `
<div
  className="color-schema-purple-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 18`] = `
<div
  className="color-schema-brown uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 19`] = `
<div
  className="color-schema-brown uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 20`] = `
<div
  className="color-schema-brown-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 21`] = `
<div
  className="color-schema-brown-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 22`] = `
<div
  className="color-schema-orange uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 23`] = `
<div
  className="color-schema-orange uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 24`] = `
<div
  className="color-schema-orange-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 25`] = `
<div
  className="color-schema-orange-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 26`] = `
<div
  className="color-schema-cyan uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 27`] = `
<div
  className="color-schema-cyan uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 28`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 29`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 30`] = `
<div
  className="color-schema-grey uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 31`] = `
<div
  className="color-schema-grey uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 32`] = `
<div
  className="color-schema-grey-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 33`] = `
<div
  className="color-schema-grey-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 34`] = `
<div
  className="color-schema-pink uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 35`] = `
<div
  className="color-schema-pink uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 36`] = `
<div
  className="color-schema-pink-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 37`] = `
<div
  className="color-schema-pink-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema 38`] = `
<div
  className="color-schema-pink uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well content 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Well content 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Well content 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Well content 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Well controlled 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well controlled 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well controlled 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well controlled 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well default props 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well disabled 1`] = `
<div
  className="uu5-bricks-well uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Well disabled 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well disabled 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well disabled 4`] = `
<div
  className="uu5-bricks-well uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Well docKit examples UU5.Bricks.Well should render without crash 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Some content"
  />
</div>
`;

exports[`UU5.Bricks.Well dynamic 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well dynamic 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well dynamic 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well dynamic 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well hidden 1`] = `
<div
  className="uu5-bricks-well uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well hidden 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well hidden 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well hidden 4`] = `
<div
  className="uu5-bricks-well uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well id 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well ignoreHTML 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well ignoreHTML 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well ignoreHTML 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well ignoreHTML 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well mainAttrs 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well name 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 5`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 6`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 7`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 8`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 9`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 10`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 11`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 12`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 13`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 14`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Well nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Well nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Well nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Well nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Well nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Well noIndex 1`] = `
<div
  className="uu5-bricks-well uu5-noindex uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well noIndex 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well noIndex 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well noIndex 4`] = `
<div
  className="uu5-bricks-well uu5-noindex uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well pureRender 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well pureRender 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well pureRender 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well pureRender 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well selected 1`] = `
<div
  className="uu5-bricks-well uu5-common-selected uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well selected 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well selected 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well selected 4`] = `
<div
  className="uu5-bricks-well uu5-common-selected uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well style 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Well style 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Well style 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Well style 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Well textCorrector 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well textCorrector 2`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well textCorrector 3`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well textCorrector 4`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well tooltip 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
